updated broken links

--- a/my website.html
+++ b/my website.html
@@ -5,8 +5,8 @@
 <h4>Feel free to take a look around and enjoy your stay :)</h4></center>
 <center>
 <nav>
-		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog_pictures.html">Dog pictures</a>
-		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog_videos.html">Dog Videos</a>
+		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog pictures.html">Dog pictures</a>
+		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog videos.html"">Dog Videos</a>
 		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\assignment.html">My coding journey</a>
 </nav>
 <header><br><br>
