--- a/my website.html
+++ b/my website.html
@@ -5,9 +5,9 @@
 <h4>Feel free to take a look around and enjoy your stay :)</h4></center>
 <center>
 <nav>
-		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog pictures.html">Dog pictures</a>
-		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\dog videos.html"">Dog Videos</a>
-		<a href="C:\Users\Cagol\OneDrive\Documents\GitHub\HTML-and-CSS-projects\assignment.html">My coding journey</a>
+		<a href="dog pictures.html">Dog pictures</a>
+		<a href="dog videos.html"">Dog Videos</a>
+		<a href="assignment.html">My coding journey</a>
 </nav>
 <header><br><br>
 <body><main>Thanks for visiting my website. I'm new to coding, and as I get more experience I would like to create a log of my progress. 
