Lists, Tables, Entities, and CSS

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -3,12 +3,8 @@
 	<head>
 		<title>Welcome to my test!</title>
 	</head>
-	<style>
-		div{color:red;
-		}
-		u{color:blue;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="My_CSS_Style.css">
+	</link>
 	<body>
 		<center>
 		<h1>Let's see what the div and style texts can do!</h1>
@@ -16,11 +12,12 @@
 			the div tag the color red, and the u tag the color blue.
 		</p>
 		<div>
-		<p>What this allows me to do is - instead of seperately tagging each item,
+		<p>What this allows me to do is this:
+		</div>
+		instead of seperately tagging each item,
 		I can define this paragraph such that <u>this is blue</u> but everything else
 		is red. 
 		</p>
-		</div>
 		</center>
 	</body>
 </html>
