--- a/Basic_HTML_and_Javascript_1/Basic HTML 1.html
+++ b/Basic_HTML_and_Javascript_1/Basic HTML 1.html
@@ -3,7 +3,12 @@
 <script>
 		alert("hello,world");
 </script>
-<body> 
+<body>
+		<header>
+			<h4>Basic HTML Template</h4>
+			<p>Introduction to basic HTML syntax</p>
+			<p>Added another paragraph.</p>
+		</header>
 		<p><font color="red" face="arial" size="5">This is my paragraph for the assignment. I am learning how to alter font color currently.</font></p>
 		<p><font color="#1FF6E1" face="arial" size="5"><b><i><u>This is my second paragraph for the assignment. Unlike the first one, this color is blue.</u></i></b></font></p>
 		<img src="https://c.files.bbci.co.uk/0C28/production/_122621130_artist_s_impression_of_the_james_webb_space_telescope.jpg" alt="Sorry, something happend! :("><img>
