space station project

--- a/Website Project/index.html
+++ b/Website Project/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>The Space Station | Resort</title>
 		<link rel="stylesheet" href="./css/shared.css">
-		<link rel="stylesheet" href="./css/animations.css"
+		<link rel="stylesheet" href="./css/animations.css">
 
 	</head>
 	<body>
@@ -42,7 +42,7 @@
 							<img src="./images/thumb/thumbnail_1.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -54,7 +54,7 @@
 							<img src="./images/thumb/thumbnail_2.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 							<img src="./images/thumb/thumbnail_3.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -78,7 +78,7 @@
 							<img src="./images/thumb/thumbnail_4.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -87,10 +87,10 @@
 					<!--Photo Container 5 -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/thumbnail_5.jpg" alt="Sorry! The picture did not load">
+							<img src="./images/thumb/thumbnail_5.png" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -102,7 +102,7 @@
 							<img src="./images/thumb/thumbnail_6.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -114,7 +114,7 @@
 							<img src="./images/thumb/thumbnail_7.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -126,7 +126,7 @@
 							<img src="./images/thumb/thumbnail_8.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -138,7 +138,7 @@
 							<img src="./images/thumb/thumbnail_9.jpg" alt="Sorry! The picture did not load">
 							<div class="photo-overlay">
 								<h3 class="white-head">Click here to Enlarge</h3>
-								<p>We have several space launches departing daily, book your flight today
+								<p>We have several space launches departing daily, book your flight today</p>
 							</div>
 						</div>
 					</div>
@@ -147,6 +147,7 @@
 					
 				</div>
 			</div>
+			
 		</section>
 		<!-- Gallery -->
 		
@@ -165,13 +166,13 @@
 						<div class="form-rsvp">
 							<form action="" method="post">
 								<input class="rsvp" type="text" value="" placeholder="First Name">
-								<input class="rsvp" type="text" value="" placeholder="Last name"
+								<input class="rsvp" type="text" value="" placeholder="Last name">
 								<input class="rsvp" type="text" value="" placeholder="Email Address">
 								<input class="rsvp" type="text" value="" placeholder="Phone Number">
 								<div class="form-spacer">
 									<label class="terms">Terms and Conditions</label>
 								</div>
-								<div>
+								<div class="submit">
 									<input type="submit" value="Submit">
 								</div>
 							</form>
