one page website submission

--- a/My own website/my own website.html
+++ b/My own website/my own website.html
@@ -8,7 +8,7 @@
 	F. Nav bar w bookmarks y
 -->
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="style1.css">
+<link rel="stylesheet" type="text/css" href="./CSS/style1.css">
 
 	<head>
 		<meta charset="utf-8">
