read me update/ academy cinemas fix

--- a/bootstrap4_project/academy cinemas.html
+++ b/bootstrap4_project/academy cinemas.html
@@ -127,7 +127,7 @@
     <form class="text-center">
         <div class="form-group">
             <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" class="form-control" style="width: 50%; margin: auto;" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
