--- a/bootstrap4_project/academy cinemas.html
+++ b/bootstrap4_project/academy cinemas.html
@@ -23,7 +23,7 @@
               <a class="nav-link text-light" href="#showtimes">Showtimes</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link text-light" href="#">Deals</a>
+              <a class="nav-link text-light" href="#deals">Deals</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -134,7 +134,7 @@
         </div>
         <!--end jumbotron heading-->
    <div>
-    <form class="text-center">
+    <form class="text-center" id="deals">
         <div class="form-group">
             <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
           <input type="email" class="form-control" style="width: 50%; margin: auto;" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
